@@ -3,6 +3,7 @@ package br.com.lett.crawlernode.crawlers.corecontent.argentina;
 import java.util.*;
 
 import br.com.lett.crawlernode.core.fetcher.FetchMode;
+import br.com.lett.crawlernode.core.fetcher.FetchMode;
 import br.com.lett.crawlernode.core.fetcher.ProxyCollection;
 import br.com.lett.crawlernode.core.fetcher.methods.ApacheDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.methods.FetcherDataFetcher;
@@ -23,6 +24,7 @@ import org.json.JSONObject;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.Crawler;
 import br.com.lett.crawlernode.util.Logging;
+import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 
 public class ArgentinaFravegaCrawler extends Crawler {
@@ -37,7 +39,7 @@ public class ArgentinaFravegaCrawler extends Crawler {
 
    public ArgentinaFravegaCrawler(Session session) {
       super(session);
-      super.config.setFetcher(FetchMode.APACHE);
+      super.config.setFetcher(FetchMode.JSOUP);
       super.config.setParser(Parser.HTML);
    }
 
@@ -45,11 +47,34 @@ public class ArgentinaFravegaCrawler extends Crawler {
    protected Response fetchResponse() {
       Request request = Request.RequestBuilder.create()
          .setUrl(session.getOriginalURL())
-         .setProxyservice(Arrays.asList(ProxyCollection.BUY, ProxyCollection.LUMINATI_RESIDENTIAL_BR, ProxyCollection.NETNUT_RESIDENTIAL_BR, ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY))
+         .setProxyservice(Arrays.asList(ProxyCollection.BUY, ProxyCollection.NETNUT_RESIDENTIAL_AR_HAPROXY, ProxyCollection.LUMINATI_RESIDENTIAL_BR, ProxyCollection.NETNUT_RESIDENTIAL_BR, ProxyCollection.SMART_PROXY_AR))
          .build();
 
-      Response response = CrawlerUtils.retryRequestWithListDataFetcher(request, List.of(new ApacheDataFetcher(), new JsoupDataFetcher(), new FetcherDataFetcher()), session, "get");
+      Response response = CrawlerUtils.retryRequest(request, session, new JsoupDataFetcher(), true);
+      JSONObject productJson = getProductJson(response);
+
+      List<String> proxies = List.of(ProxyCollection.BUY_HAPROXY, ProxyCollection.LUMINATI_SERVER_BR_HAPROXY, ProxyCollection.NETNUT_RESIDENTIAL_ANY_HAPROXY);
+      if(productJson == null) {
+         for (int i = 0; i < 3; i++) {
+            if(getProductJson(response) == null) {
+               request.setProxyServices(Arrays.asList(proxies.get(i)));
+               response = CrawlerUtils.retryRequest(request, session, new JsoupDataFetcher(), true);
+            }
+         }
+      }
+
       return response;
+   }
+
+   private JSONObject getProductJson(Response response) {
+      JSONObject jsonT = CrawlerUtils.selectJsonFromHtml(Jsoup.parse(response.getBody()), "#__NEXT_DATA__", null, " ", false, false);
+
+      String[] urlParts = session.getOriginalURL().split("/");
+      String[] productSlugParts = urlParts[urlParts.length - 1].split("-");
+
+      String sku = productSlugParts[productSlugParts.length - 1];
+      JSONObject productJson = JSONUtils.getValueRecursive(jsonT, "props.pageProps.__APOLLO_STATE__.ROOT_QUERY.sku({\"code\":\"" + sku + "\"})", JSONObject.class);
+      return productJson;
    }
 
    @Override
